--- a/express-example/package.json
+++ b/express-example/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parse": "^0.1.0",
     "cheerio": "^1.0.0-rc.3",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "pug": "^2.0.4",
