--- a/express-example/package.json
+++ b/express-example/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parse": "^0.1.0",
+    "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "md5": "^2.2.1",
