--- a/express-example/package.json
+++ b/express-example/package.json
@@ -18,6 +18,8 @@
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "md5": "^2.2.1",
+    "mongoose": "^5.6.5",
+    "mongoose-int32": "^0.3.1",
     "multer": "^1.4.2",
     "pug": "^2.0.4",
     "shortid": "^2.2.14"
