--- a/serverless-rest-api/functions/package.json
+++ b/serverless-rest-api/functions/package.json
@@ -16,7 +16,8 @@
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.3.0",
     "firebase-functions-helper": "^0.7.3",
-    "id-generator": "^1.1.0"
+    "id-generator": "^1.1.0",
+    "short-id": "0.1.0-1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6",
