deploy angular to github

--- a/angular-shopping-cart/angular.json
+++ b/angular-shopping-cart/angular.json
@@ -118,8 +118,13 @@
               "devServerTarget": "angular-shopping-cart:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "angular-shopping-cart"
 }
